<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/record_popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F8">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryBlue"
        android:minHeight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Arztpraxis XYZ"
        app:titleCentered="true"
        app:titleTextColor="@color/lightBlue" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/klicken_sie_bitte_auf_aufnahme_starten_und_sagen_die_folgenden_daten"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/DatenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nachname_n_vorname_n_geschlecht_n_geburtsdatum_n_telefonnummer_n_email"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoText" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/aufnahmeAnimation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DatenText"
        app:lottie_rawRes="@raw/aufnahme" />

    <Button
        android:id="@+id/btn_start_recording"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/primaryBlue"
        android:text="@string/aufnahme_starten"
        android:textColor="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aufnahmeAnimation" />

    <Button
        android:id="@+id/btn_stop_recording"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primaryBlue"
        android:enabled="false"
        android:text="@string/aufnahme_stoppen"
        android:textColor="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_recording" />

    <Button
        android:id="@+id/btn_closePage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryBlue"
        android:text="@string/seite_schlie_en"
        android:textColor="@color/lightBlue"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_stop_recording"
        app:layout_constraintVertical_bias="0.887" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/patienten_terminal_v1_0"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>